<resources>
    <string name="app_name">SlidingUp</string>

    <string name="google_map_api_key">AIzaSyClh_ftxf_6umYnj4TAeNMh1vYYDdWQoF8</string>

    <string name="error_network_connection">Network error. Please check your Internet connection</string>

    <!-- Security Permission Strings. -->

    <string name="permission_denied">Permission Denied</string>
    <string name="i_am_sure">I AM SURE</string>
    <string name="re_try">RE-TRY</string>
    <string name="access_fine_loc">Without this permission, you won\'t be able to get your Location. Are you sure you want to Deny this permission.?</string>
    <string name="open_settings">Open Settings</string>
    <string name="permission_required_dialog_title">Permission Required</string>
    <string name="permission_denied_dialog_info">Without accepting Location permission you can\'t proceed further</string>

    <string name="need_location">Enable GPS SERVICE</string>
    <string name="location_content">App needs your location in order to find nearby point of interest</string>
    <string name="turn_on">Turn On</string>

    <!-- Main Activity -->
    <string name="play_service_not_installed">Play services is not installed!</string>

    <!-- Article Fragment -->

    <string name="wikipedia">Wikipedia</string>
    <string name="get_there">Get there</string>
    <string name="route_suggestions">Route Suggestions</string>
    <string name="route_suggestions_info">Suggested Route Info</string>
    <string name="starting_point">Starting Point</string>
    <string name="end_point">End Point</string>
    <string name="distance">Distance</string>
    <string name="duration">Duration</string>
    <string name="semi_colon">:</string>

</resources>
